--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx zenn preview",
+    "article": "npx zenn new:article",
+    "book": "npx zenn new:book"
   },
   "keywords": [],
   "author": "",
